--- a/app/src/main/res/layout/activity_polynomial.xml
+++ b/app/src/main/res/layout/activity_polynomial.xml
@@ -34,12 +34,12 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
                 android:ems="10"
                 android:id="@+id/x3TextView"
                 android:hint="X^3"
                 android:backgroundTint="#000000"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:inputType="text" />
         </LinearLayout>
 
         <LinearLayout
@@ -58,12 +58,12 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
                 android:ems="10"
                 android:id="@+id/x2TextView"
                 android:hint="X^2"
                 android:backgroundTint="#000000"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:inputType="text" />
 
         </LinearLayout>
 
@@ -83,12 +83,12 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
                 android:ems="10"
                 android:id="@+id/xTextView"
                 android:hint="X"
                 android:backgroundTint="#000000"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:inputType="text" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,12 +107,12 @@
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
                 android:ems="10"
                 android:id="@+id/constantTextView"
                 android:hint="Constant"
                 android:backgroundTint="#000000"
-                android:textColor="#000000" />
+                android:textColor="#000000"
+                android:inputType="text" />
         </LinearLayout>
 
         <Button
@@ -121,5 +121,13 @@
             android:text="Calculate"
             android:id="@+id/calculateBtn"
             android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/resultTextView"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center" />
     </LinearLayout>
 </RelativeLayout>
