--- a/app/src/main/res/layout/activity_binomial.xml
+++ b/app/src/main/res/layout/activity_binomial.xml
@@ -7,8 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.a4wieders.algebraandbeyond.PolynomialActivity"
-    android:background="#ff0000">
+    tools:context="com.a4wieders.algebraandbeyond.BinomialActivity"
+    android:background="#fff200">
 
     <LinearLayout
         android:orientation="vertical"
@@ -21,32 +21,6 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="X^3"
-                android:id="@+id/textView"
-                android:textAlignment="center"
-                android:textColor="#000000" />
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:id="@+id/x3TextView"
-                android:hint="X^3"
-                android:backgroundTint="#000000"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:selectAllOnFocus="true" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
@@ -54,7 +28,6 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="X^2"
-                android:id="@+id/textView2"
                 android:textAlignment="center"
                 android:textColor="#000000" />
 
@@ -62,39 +35,13 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:id="@+id/x2TextView"
+                android:id="@+id/x2Bin"
                 android:hint="X^2"
                 android:backgroundTint="#000000"
                 android:textColor="#000000"
                 android:inputType="text"
-                android:selectAllOnFocus="true" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="X    "
-                android:id="@+id/textView3"
-                android:textAlignment="center"
-                android:textColor="#000000" />
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:id="@+id/xTextView"
-                android:hint="X"
-                android:backgroundTint="#000000"
-                android:textColor="#000000"
-                android:inputType="text"
-                android:selectAllOnFocus="true" />
+                android:textColorHint="#605d5d"
+                android:foregroundTint="#000" />
         </LinearLayout>
 
         <LinearLayout
@@ -107,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Constant"
-                android:id="@+id/textView4"
+                android:id="@+id/textView8"
                 android:textAlignment="center"
                 android:textColor="#000000" />
 
@@ -115,26 +62,27 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:id="@+id/constantTextView"
+                android:id="@+id/constantBin"
                 android:hint="Constant"
                 android:backgroundTint="#000000"
                 android:textColor="#000000"
                 android:inputType="text"
-                android:selectAllOnFocus="true" />
+                android:textColorHint="#605d5d"
+                android:foregroundTint="#000" />
         </LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Calculate"
-            android:id="@+id/calculateBtn"
+            android:id="@+id/calcBtnBin"
             android:layout_gravity="center_horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/resultTextView"
+            android:id="@+id/resultBin"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center" />
     </LinearLayout>
