--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
                 android:id="@+id/BioBtn"
                 android:layout_weight="1"
                 android:layout_margin="0dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:backgroundTint="#fff200" />
         </LinearLayout>
 
         <LinearLayout
@@ -65,7 +66,8 @@
                 android:id="@+id/QuadBtn"
                 android:layout_weight="1"
                 android:layout_margin="0dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:backgroundTint="#00ff22" />
 
             <Button
                 android:layout_width="fill_parent"
@@ -74,7 +76,8 @@
                 android:id="@+id/TriBtn"
                 android:layout_weight="1"
                 android:layout_margin="0dp"
-                android:padding="0dp" />
+                android:padding="0dp"
+                android:backgroundTint="#001bcc" />
         </LinearLayout>
 
     </LinearLayout>
